--- a/app/views/layouts/navigation/collapsible_elements/_signed_in_links.html.erb
+++ b/app/views/layouts/navigation/collapsible_elements/_signed_in_links.html.erb
@@ -14,5 +14,5 @@
   <%= link_to 'Edit Profile', edit_user_registration_path %>
 </li>
 <li class="mobile-menu">
-  <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+  <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: "logout" %> %>
 </li>
