--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,10 @@
-<h1>
-test
-</h1>
+<div class="container">
+  <div class="row">
+    <div id="side-menu"  class="col-sm-3">
+    </div><!-- side-menu -->
+
+    <div id="main-content" class="col-sm-9">
+    </div><!-- main-content -->
+
+  </div><!-- row -->
+</div><!-- container -->
