Add CSS to posts on the home page - add CSS to the posts.scss file - add CSS to the mobile.scss to fix too large text issues on smaller screens

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,4 +22,5 @@
     <%= render 'layouts/navigation' %>
     <%= yield %>
   </body>
+  <script src="/assets/js/style.js" type="application/javascript"></script>
 </html>
