Add a popup window to show a full post's content - Add bootstrap's modal component to show full post's content - Render the modal inside the home page's template - Add js to fill the modal with post's content and show it - Add CSS to style the modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,5 +20,6 @@
 
 // Partials - main css files
 @import "partials/*";
+@import "partials/posts/*";
 @import "partials/layout/*";
 @import "responsive/*";
