--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,4 +23,5 @@
     <%= yield %>
   </body>
   <script src="/assets/js/style.js" type="application/javascript"></script>
+  <script src="/assets/js/modal.js" type="application/javascript"></script>
 </html>
