Add a search form in branch pages - Render a search form inside the _branch.html.erb - Create a _search_form.html.erb partial file - Define a category_field_partial_path helper method in PostsHelper - Create a _category_field.html.erb partial file - Add CSS for the the search form in branch_page.scss

--- a/app/views/posts/_branch.html.erb
+++ b/app/views/posts/_branch.html.erb
@@ -5,6 +5,10 @@
   </div><!-- row -->
 
   <div class="row">
+    <%= render  'posts/branch/search_form',
+                branch: branch,
+                search_placeholder: search_placeholder %>
+
     <%= render 'posts/branch/categories', branch: branch %>
   </div>
 
